# RGBD_Object_Discovery

./: .gitignore  CMakeLists.txt  Readme.md  abw_sequence.sh  compare.py  nyu_ablation_sequence.sh  nyu_visualize.py  uw_sequence.sh
cfg/: config_abw.txt  config_example.txt  config_nyu.txt  config_uw.txt
data/: deal.py  show_edge.py  wrap_nyu_image.py
data/UW_RGBD_4_OD/: .README.md.swp  get_image_list.py  show.py  validate.txt
data/UW_RGBD_4_OD/labels/: 0100128-color.txt  0100270-color.txt  0100327-color.txt  0100398-color.txt  0100409-color.txt  0100623-color.txt  0100746-color.txt  0100874-color.txt  0200064-color.txt  0200093-color.txt  0200129-color.txt  0200207-color.txt  0200391-color.txt  0200587-color.txt  0200615-color.txt  0200659-color.txt  0200679-color.txt  0300023-color.txt  0300047-color.txt  0300097-color.txt  0300156-color.txt  0300273-color.txt  0300307-color.txt  0300465-color.txt  0300488-color.txt  0300583-color.txt  0400202-color.txt  0400217-color.txt  0400321-color.txt  0400405-color.txt  0400414-color.txt  0400689-color.txt  0400730-color.txt  0400761-color.txt  0400858-color.txt  0500039-color.txt  0500116-color.txt  0500394-color.txt  0500688-color.txt  0500727-color.txt  (+82 more)
include/: ConfigParser.hpp  Plane.hpp  RGBDFrame.hpp  Timer.hpp
src/: CMakeLists.txt  Plane.cpp  RGBDFrame.cpp  label_nyu.cpp  test_rgbdframe.cpp  train_abw.cpp  train_example.cpp  train_nyu.cpp  train_uw.cpp
